<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="StudentUpdate">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtPageHeader"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/activity_student_update_page_header"
        android:textSize="25sp"
        android:textStyle="bold" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/txtPageHeader" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtStudentIDLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtPageHeader"
        android:layout_margin="10dp"
        android:padding="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtStudentID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_id_hint"
            android:inputType="number"
            android:enabled="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtStudentNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtStudentIDLayout"
        android:layout_margin="10dp"
        android:padding="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtStudentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_name_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtStudentSurnameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtStudentNameLayout"
        android:layout_margin="10dp"
        android:padding="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtStudentSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_surname_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtStudentSurnameLayout"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUpdateStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/maroon"
            android:text="@string/activity_student_update_button_update_student"
            android:textColor="@color/white"
            app:cornerRadius="5dp" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnBackMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/back_main"
        android:src="@drawable/ic_back"
        app:backgroundTint="@color/maroon"
        app:tint="@color/white" />

</RelativeLayout>