<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtPageHeader"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/activity_main_page_header"
        android:textSize="25sp"
        android:textStyle="bold" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/txtPageHeader" />

    <LinearLayout
        android:id="@+id/txtListHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtPageHeader"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.1"
            android:background="@drawable/border_header"
            android:gravity="center"
            android:text="@string/list_header_id"
            android:textColor="@color/white" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.35"
            android:background="@drawable/border_header"
            android:gravity="center"
            android:text="@string/list_header_name"
            android:textColor="@color/white" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.35"
            android:background="@drawable/border_header"
            android:gravity="center"
            android:text="@string/list_header_surname"
            android:textColor="@color/white" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.1"
            android:background="@drawable/border_header"
            android:gravity="center"
            android:text="@string/list_header_delete"
            android:textColor="@color/white" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.1"
            android:background="@drawable/border_header"
            android:gravity="center"
            android:text="@string/list_header_update"
            android:textColor="@color/white" />

    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/txtListHeader" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/txtListHeader">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/txtListHeader"
        android:gravity="center"
        android:text="No Student Found"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnStudentAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/maroon"
        app:tint="@color/white" />
</RelativeLayout>